# P4

./: .gitignore  Dictionary.py  IllegalCharacterException.py  Lexer.py  Position.py  README.md  Token.py  code_generator.py  compiler.mac.spec  compiler.py  custom_parser.py  dictionary.py  lexer.py  main.py  parser_nodes.py  position.py  pyproject.toml  text_input.txt
.github/workflows/: automatic-packaging.yaml
tests/: test_integration.py  test_lexer.py
tests/input/: invalid_syntax.txt  successful.txt
