[tool.poetry]
name = "p4compiler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10 <3.13"
pyinstaller = "^6.5.0"
openpyxl = "^3.1.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
